# vkStdpar

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: VulkanStdparConfig.cmake.in
docs/: API.md
examples/: CMakeLists.txt  algorithms_demo.cpp  basic_usage.cpp  device_selection.cpp
include/: vulkan_stdpar.hpp
include/vulkan_stdpar/: vulkan_stdpar.hpp
include/vulkan_stdpar/algorithms/: parallel_invoker.hpp
include/vulkan_stdpar/containers/: unified_reference.hpp  unified_vector.hpp
include/vulkan_stdpar/core/: device_selection.hpp  exceptions.hpp  memory_management.hpp  profiling.hpp  resource_management.hpp  versioning_engine.hpp
include/vulkan_stdpar/iterators/: unified_iterator.hpp
scripts/: bundle_headers.py
